# joosebot

./: .env.example  .gitignore  pyproject.toml
src/bots/: utils.py
src/bots/goose/: __init__.py  responders.py  utils.py
